# rl_gcg

./: README.md  package.xml
GCG/: interface_gcg.py  interface_gcg_tb.py
GCG/ROS/: interface_gcg_tb.py
ROS/: CMakeLists.txt
ROS/launch/: simulation.launch  simulation_tb.launch
ROS/launch/circle_target/: circle_target_drone.launch  circle_target_tb.launch
ROS/launch/collision_avoidance/: collision_avoidance_drone.launch  collision_avoidance_tb.launch  test.launch
ROS/launch/static_target/: random_behaviour_drone.launch  static_target_drone.launch  static_target_tb.launch
ROS/python/: evaluate.py  evaluate_tb.py  image_to_np.py  image_to_np_tb.py  orientation_to_ypr.py  orientation_to_ypr_tb.py  simulate_behaviour.py  simulate_behaviour_tb.py  simulate_random_behaviour.py  simulate_target.py
ROS/python/circle_target/: behaviour_drone_ct.py  behaviour_target.py  behaviour_tb_ct.py  evaluate_drone_ct.py  evaluate_tb_ct.py  image_to_np_drone_ct.py  image_to_np_tb_ct.py  orientation_to_ypr_drone_ct.py  orientation_to_ypr_tb_ct.py
ROS/python/collision_avoidance/: behaviour_drone_ca.py  behaviour_tb_ca.py  evaluate_drone_ca.py  evaluate_tb_ca.py  image_to_np_drone_ca.py  image_to_np_tb_ca.py  orientation_to_ypr_drone_ca.py  orientation_to_ypr_tb_ca.py
ROS/python/static_target/: behaviour_drone_st.py  behaviour_tb_st.py  evaluate_drone_st.py  evaluate_tb_st.py  image_to_np_drone_st.py  image_to_np_tb_st.py  orientation_to_ypr_drone_st.py  orientation_to_ypr_tb_st.py  random_behaviour_drone.py
ROS/scripts/: mainscript.sh  prescript.sh  start_singularity.sh
ROS/scripts/esat/: drone_ca.condor  drone_ct.condor  drone_st.condor  evalscript_drone_ca.sh  mainscript_drone_ca.sh  mainscript_drone_ct.sh  mainscript_drone_st.sh  mainscript_tb_ca.sh  mainscript_tb_ct.sh  mainscript_tb_st.sh  postscript.sh  start_singularity_drone_ca.sh  start_singularity_drone_ct.sh  start_singularity_drone_st.sh  start_singularity_tb_ca.sh  start_singularity_tb_ct.sh  start_singularity_tb_st.sh  submit.condor  tb_ca.condor  tb_ct.condor  tb_st.condor
ROS/scripts/laptop/: evalscript_drone_ca.sh  mainscript_drone_ca.sh  mainscript_drone_ct.sh  mainscript_drone_st.sh  mainscript_tb_ca.sh  mainscript_tb_ct.sh  mainscript_tb_st.sh  start_singularity_drone_ca.sh  start_singularity_drone_ct.sh  start_singularity_drone_st.sh  start_singularity_tb_ca.sh  start_singularity_tb_ct.sh  start_singularity_tb_st.sh
ROS/world/: corridor.world  cylinder.world  empty_corridor.world
gcg/ROS/: interface_gcg.py  interface_gcg_drone_ca.py  interface_gcg_drone_ct.py  interface_gcg_drone_st.py  interface_gcg_tb.py  interface_gcg_tb_ca.py  interface_gcg_tb_ct.py  interface_gcg_tb_st.py
gcg/sandbox/gkahn/gcg/: loggcg_2018-05-24_1529
gcg/sandbox/gkahn/gcg/algos/: gcg.py
gcg/sandbox/gkahn/gcg/sampler/: replay_pool.py  sampler.py
gcg/scripts/: run_experiment_lite.py
launch/: simulation.launch
python/: evaluate.py  image_to_np.py  orientation_to_ypr.py
